[package]
name = "runner"
version = "0.1.1"
authors = ["Noah Callaway <noah@apsis.io>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "runnerlib"
path = "src/lib.rs"

[[bin]]
name = "runner"
path = "src/bin.rs"

[dependencies]
clap = "2.33.0"
ctrlc = { version = "3.1.3", features = ["termination"]}
